# GenAI_Agents

./: main.py  pyproject.toml  requirements.txt
Business/: Carrer_adviser.ipynb  Essay_analyzer.ipynb  contract_analysing_assistant.ipynb  customer_support_agent.ipynb  project_management_assistant.ipynb  trip_planner.ipynb
Business/ai_trip_planner/: setup.py
Business/ai_trip_planner/StreamlitUI/: app_ui.py
Business/ai_trip_planner/agents/: configs.yaml  prompts.py  stateflow.py  tools.py  utils.py  workflow_agents.py
Business/ai_trip_planner/fastapiendpoints/: app.py
Business/fastapiendpoints/: app.py
MCP_agents/: mcp_server.py  mcp_test.ipynb
simple_QA_chatbot/: qa_bot.ipynb
simple_conversational_agent/agent/: conversational_agent.py
simple_conversational_agent/llm_model/: groq_llm.py
simple_dataanalysis_agent/: dataanalysis_agent.ipynb
text_analysis_pipeline/: text_analysis.ipynb
youtube_transcript_and_podcast_generation/: podcast_generation_system.ipynb  youtube_transcript_summarizer.ipynb
