[project]
name = "genai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai>=0.41.5",
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.13",
    "fastmcp>=2.9.2",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.6",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.9",
    "matplotlib>=3.10.3",
    "mcp>=1.9.4",
    "networkx>=3.5",
    "pinecone>=7.3.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "pyvis>=0.3.2",
    "streamlit>=1.46.0",
    "tabulate>=0.9.0",
    "youtube-transcript-api>=1.1.0",
]
